--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<img src="images/hero.jpg" alt="Placeholder image">
 <!-- Top Section -->
 <div class="top-section">
     <header>
