Force deploy test

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>My Week 3 Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<p style="color:red; font-size:24px;">
+TEST UPDATE — IF YOU SEE THIS, GITHUB IS DEPLOYING
+</p>
 <body>
 <img src="images/hero.jpg" alt="Placeholder image">
 <!-- Top Section -->
