--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </p>
 <body>
-<img src="images/hero.jpg" alt="Placeholder image">
+<img src="images/hero-music.jpg" alt="Music image">
 <!-- Top Section -->
 <div class="top-section">
     <header>
