--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </p>
 <body>
 <img src="images/hero-music.jpg" alt="Music image">
+booking-with-a-smile.jpg
 <!-- Top Section -->
 <div class="top-section">
     <header>
@@ -55,9 +56,23 @@
     </nav>
 </div>
 
+<section class="selection-section">
 
+  <div class="card">
+    <a href="booking-artists.html">
+      <img src="images/artist.jpg" alt="Artists">
+      <h2>Artists</h2>
+    </a>
+  </div>
 
+  <div class="card">
+    <a href="booking-venues.html">
+      <img src="images/venue.jpg" alt="Venues">
+      <h2>Venues</h2>
+    </a>
+  </div>
 
+</section>
 
 
 
