--- a/index.html
+++ b/index.html
@@ -58,18 +58,14 @@ booking-with-a-smile.jpg
 
 <section class="selection-section">
 
-  <div class="card">
-    <a href="booking-artists.html">
-      <img src="images/artist.jpg" alt="Artists">
-      <h2>Artists</h2>
-    </a>
+  <div class="card" id="artistsCard">
+    <img src="images/artist.jpg" alt="Artists">
+    <h2>Artists</h2>
   </div>
 
-  <div class="card">
-    <a href="booking-venues.html">
-      <img src="images/venue.jpg" alt="Venues">
-      <h2>Venues</h2>
-    </a>
+  <div class="card" id="venuesCard">
+    <img src="images/venue.jpg" alt="Venues">
+    <h2>Venues</h2>
   </div>
 
 </section>
