Add the 7 files noted above

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@ booking-with-a-smile.jpg
     </nav>
 </div>
 
-<section class="selection-section">
+<section class="selection-section" style="border: 2px solid red; padding: 20px;">
 
-  <div class="card" id="artistsCard">
+  <div class="card" style="border: 2px solid blue;">
     <img src="images/artist.jpg" alt="Artists">
     <h2>Artists</h2>
   </div>
 
-  <div class="card" id="venuesCard">
+  <div class="card" style="border: 2px solid green;">
     <img src="images/venue.jpg" alt="Venues">
     <h2>Venues</h2>
   </div>
